# enfuse-gui

./: .gitignore  README.md  com.gitlab.Latesil.enfuse-gui.json  com.gitlab.Latesil.enfuse-gui.json~  meson.build
build-dir/: metadata  metadata.locale
build-dir/files/: manifest.json
build-dir/files/share/appdata/: com.gitlab.Latesil.enfuse-gui.appdata.xml
build-dir/files/share/applications/: com.gitlab.Latesil.enfuse-gui.desktop
build-dir/files/share/enfuse-gui/: enfuse-gui.gresource
build-dir/files/share/enfuse-gui/enfuse_gui/: window.py
build-dir/files/share/glib-2.0/schemas/: gschemas.compiled
build-dir/files/share/icons/hicolor/: icon-theme.cache
data/: com.gitlab.Latesil.enfuse-gui.appdata.xml.in  com.gitlab.Latesil.enfuse-gui.desktop.in  com.gitlab.Latesil.enfuse-gui.gschema.xml  meson.build
data/icons/: convert-icons-linux.sh
po/: POTFILES  com.gitlab.Latesil.enfuse-gui.pot  en.mo  meson.build  ru.mo  ru.po
rpm/: enfuse-gui.spec
src/: #window.ui#  enfuse-gui.in  enfuse_gui.gresource.xml  main.py  meson.build  photo_box.py  photo_list_box.py  photo_list_box.ui  window.py  window.ui  window.ui~
